2013-02-19
* remove dependency on PyXML
* add caching database in ranking.py for C variable names
* prevent empty directories being created by ext2 scan
* start on deduplicating 'reports' from ranking scan: there is a ton of
repetition in them, which takes up a lot of space in the on disk pickles,
especially for large packages like the Linux kernel

2013-02-18
* prevent adding duplicates to report tarball
* merge generatenameshtml.py and generateuniquehtml.py
* fix sorting of scans
* add some tags from leafscans to unpackreports
* ignore files which don't have ranking results in generateuniquehtml.py and
rankimages.py

2013-02-17
* ignore statically linked files in findlibs.py

2013-02-16
* determine size for gzip files, preventing false positives and scanning time
* fix aggregate jars: use right index, prevent unnecessary storing of a ton of
data
* start moving 'tags' to unpackreports instead of the leafreports. This will
require some tweaks to how the leafscans are run as well.

2013-02-15
* optimize RPM unpacking: use size from RPM header
* don't read file in its entirety into memory in ranking, but use seek() and
read() instead
* remove dependency on fssearch in RPM unpacking
* remove unused method in kernelanalysis.py

2013-02-14
* use caching databases for Java fields and class names. This saves a ton of
time (especially fields)
* copy results more efficiently, which was a problem when there were lots of
result files

2013-02-13
* prevent some scans for running on ELF files
* remove false positives from LRZIP unpacking

2013-02-12
* fix ELF tagging in prerun.py. This prevents LZMA unpacking from being called
needlessly.
* write results of leafscans to disk earlier and don't keep them in memory
until the very late end. Rewrite everything (except the GUI) that uses the old
notation. This saves a significant chunk of memory (90% in some of my test
cases) which makes it less likely swap is used, which just kills performance.

2013-02-10